# memotrail

./: .gitignore  CLAUDE.md  LICENSE  README.md  demo.tape  pyproject.toml
docs/: CONTRIBUTING.md
docs/i18n/: README.ar.md  README.bn.md  README.cs.md  README.da.md  README.de.md  README.el.md  README.es.md  README.fi.md  README.fr.md  README.he.md  README.hi.md  README.hu.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.nl.md  README.no.md  README.pl.md  README.pt.md  README.ro.md  README.ru.md  README.sv.md  README.th.md  README.tr.md  README.uk.md  README.ur.md  README.vi.md  README.zh-CN.md  README.zh-TW.md
scripts/: demo-mock.sh  index_history.py
src/memotrail/: __init__.py  cli.py  server.py
src/memotrail/collectors/: __init__.py  claude_code.py  cursor.py
src/memotrail/core/: __init__.py  bm25.py  chunker.py  consolidator.py  embedder.py  indexer.py  reranker.py  searcher.py  watcher.py
src/memotrail/extractors/: __init__.py  decisions.py  summarizer.py
src/memotrail/storage/: __init__.py  chroma_store.py  sqlite_store.py
src/memotrail/utils/: __init__.py  config.py  logger.py  tokens.py
tests/: test_bm25.py  test_collectors.py  test_consolidator.py  test_core.py  test_extractors.py  test_reranker.py  test_watcher.py
vscode-extension/: package.json
vscode-extension/src/: extension.ts
