[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memotrail"
version = "0.1.0"
description = "Persistent memory layer for AI coding assistants. Every conversation remembered, every decision searchable."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Halil Hopa", email = "hello@memotrail.ai" },
]
keywords = [
    "claude-code", "mcp", "memory", "ai", "coding-assistant",
    "persistent-memory", "semantic-search", "context-management"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "watchdog>=4.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
]

[project.scripts]
memotrail = "memotrail.cli:main"

[project.urls]
Homepage = "https://memotrail.ai"
Repository = "https://github.com/melihhopa/memotrail"
Issues = "https://github.com/melihhopa/memotrail/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/memotrail"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
